--- a/Readme
+++ b/Readme
@@ -1,5 +1,5 @@
 /*
-===PROJECT INI DIBUAT UNTUK MEMENUHI SALAHSATU TUGAS MATA PELAJARAN KEAMANAN INFORMASI===
+===PROJECT INI DIBUAT UNTUK MEMENUHI SALAHSATU TUGAS MATA KULIAH KEAMANAN INFORMASI===
 STEGANOGRAFI DENGAN METODE LSB DAN ENKRIPSI CAESAR CIPHER
 
 DIBUAT OLEH:
